# haskell-from-principles

./: README.md
10_folding_lists/: database_processing.hs  excercises.hs  scans_excercises.hs
11_algebraic_data_types/: binary_tree.hs  excercises.hs  programmers.hs
12_signalling_adversity/: excercises.hs
13_building_projects/: excercises.hs
13_building_projects/hangman/: hangman.cabal
13_building_projects/hangman/src/: Main.hs
14_testing/: excercises.hs  intermission.hs
14_testing/morse/: morse.cabal  package.yaml
14_testing/morse/src/: Main.hs
15_monoid_semigroup/: excercises.hs  madness.hs  optional_monoid.hs
16_functor/: exercises.hs  heavy_lifting.hs  instances_of_func.hs  possibly.hs  short_excercise.hs
17_applicative/: constant_instance.hs  identity_instance.hs  list_applicative.hs  lookup.hs  variations_on_either.hs  zip_list_applicative.hs
18_monad/: exercises.hs
20_foldable/: exercises.hs  library_functions.hs
21_traversable/: exercises.hs
22_reader/: exercises.hs  reader_monad.hs  reading_comprehension.hs  shawty_prime.hs  warming_up.hs
23_state/: exercises.hs  fizz_buzz.hs  roll_your_own.hs  write_state_for_yourself.hs
24_parser-combinators/: exercises.hs  parsers.hs  parsers2.hs  parsers3.hs
25_composing_types/: compose_instances.hs  twinplicative.hs
26_monad_transformers/: either_t.hs  exercises.hs  some_instances.hs  state_t.hs  wrap_it_up.hs
28_basic_libraries/: benchmark_practice.hs  exercises.hs  vector.hs
29_io/: exercises.hs
31_final_project/fingerd/: .gitignore  finger.db  fingerd.cabal
31_final_project/fingerd/src/: Debug.hs  Lib.hs  Main.hs  Modify.hs
6_typeclasses/: eq.hs  excercises.hs
7_more_functional_patterns/: case_practice.hs  excercises.hs  variety_pack.hs
8_recursion/: excercises.hs
9_lists/: enum_from_to.hs  excercises.hs  square_cube.hs  thy_fearful_symmetry.hs  zipping.hs
